--- a/projectx.html
+++ b/projectx.html
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    my first website
+<    <title>
+        website tiile
+    </title>
+    <body>
+        i have nothing to write here
+    </body>
 </html>
