--- a/about.html
+++ b/about.html
@@ -1,18 +1,24 @@
-<html lang="en"
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
 <body>
-  <div class=container>
-    <main>
-        <form>
-        </form>
-    </main>
-    <aside>
-      <p>This side that side other side</p>
-    </aside>
-    <footer>
-      <p>
-        created by ceasar
-      </p>
-    </footer>
-    </div>
+    <h1>My Header</h1>
+    <a href=""></a>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non consectetur laboriosam iusto fugit ipsum officia
+        saepe libero ipsam dicta ut nostrum odio nulla cumque et maiores consequatur, sit aut enim. Tempora aliquam
+        earum voluptatum iure soluta, porro minus in veniam dolore libero delectus fugiat, architecto quibusdam totam
+        itaque. Facere dolorum quod, quia, qui fuga, minima maiores omnis consequuntur ipsam reiciendis modi ipsum
+        accusantium praesentium animi consequatur fugiat? Modi, veniam quod consequuntur ex consequatur reiciendis atque
+        alias vitae ipsum officiis, illo deserunt aperiam, velit maxime autem possimus. Quisquam enim quis sit animi eum
+        est. Saepe obcaecati magni maiores quia, assumenda facilis!
+    </p>
 </body>
+
 </html>
