--- a/index.html
+++ b/index.html
@@ -63,7 +63,20 @@
         </aside>
 
     </div>
-    <footer>
+    <!-- flexbox example-->
+    <div class="flex-container">
+        <div class="flex-item">flex new item 1</div>
+        <div class="flex-item">flex new item 2</div>
+        <div class="flex-item">flex new item 3</div>
+    </div>
+    <!--css grid example-->
+    <div class="grid-container">
+      <div class="grid-item">grid item 1</div>
+      <div class="grid-item">grid item 2</div>
+      <div class="grid-item">grid item 3</div>
+    </div>
+    
+          <footer>
         <p>Created by Ceasar kinyua</p>
     </footer>
     
