--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     </div>
     <!--css grid example-->
     <div class="grid-container">
-      <div class="grid-item">grid item 1</div>
-      <div class="grid-item">grid item 2</div>
-      <div class="grid-item">grid item 3</div>
+      <div class="grid-item">this is content 1</div>
+      <div class="grid-item">this is content 2</div>
+      <div class="grid-item">this is content 3</div>
     </div>
     
           <footer>
